--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@uniswap/lib": "^4.0.1-alpha",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
-    "bignumber.js": "^9.0.1"
+    "bignumber.js": "^9.0.1",
+    "hardhat-deploy-ethers": "^0.3.0-beta.11"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
