--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ethers": "^5.5.1",
     "hardhat": "^2.5.0",
     "hardhat-deploy": "^0.9.10",
+    "hardhat-gas-reporter": "^1.0.6",
     "prettier": "^2.3.2",
     "prettier-plugin-solidity": "^1.0.0-beta.17",
     "solhint": "^3.3.6",
